added destination section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
       </div>
 </header>
 
-<main>
-  <h1>in sub branch</h1>
-</main>
+
 
 
 
@@ -62,11 +60,63 @@
 
 <!-- banner -->
 
-<!-- <main>
+<main>
   <section class="destination">
-    <h2>choose your</h2>
-    <h3>perfect destinations</h3>
-    <p>Purchase treasures from the souks in Dubai. Explore the rice fields of Indonesia. Savour a coffee and croissant on the cobbled streets of Italy, or swim in sparkling waters on the beaches of Thailand. Whether its luxury accommodation, exquisite cuisine, natural wonders, historical treasures or peaceful getaways you’re after, we can craft the perfect holiday for you.</p>
+    <div class="container">
+      <h2>choose your</h2>
+      <h3>perfect destinations</h3>
+      <p>Purchase treasures from the souks in Dubai. Explore the rice fields of Indonesia. Savour a coffee and croissant on the cobbled streets of Italy, or swim in sparkling waters on the beaches of Thailand. Whether its luxury accommodation, exquisite cuisine, natural wonders, historical treasures or peaceful getaways you’re after, we can craft the perfect holiday for you.</p>
+      <div class="destination_images">
+        <div class="dest_img">
+          <a href="#">
+            <img src="assets/images/destination1.jpg" class="img-fluid" alt="">
+          </a>
+          <div class="dest_txt">
+            <h4>southeast asia</h4>
+          </div>
+        </div>
+        <div class="dest_img">
+          <a href="#">
+            <img src="assets/images/destination2.jpg" class="img-fluid" alt="">
+          </a>
+          <div class="dest_txt">
+            <h4>east asia</h4>
+          </div>
+        </div>
+        <div class="dest_img">
+          <a href="#">
+            <img src="assets/images/destination3.jpg" class="img-fluid" alt="">
+          </a>
+          <div class="dest_txt">
+            <h4>indian ocean</h4>
+          </div>
+        </div>
+        <div class="dest_img">
+          <a href="#">
+            <img src="assets/images/destination4.jpg" class="img-fluid" alt="">
+          </a>
+          <div class="dest_txt">
+            <h4>europe</h4>
+          </div>
+        </div>
+        <div class="dest_img">
+          <a href="#">
+            <img src="assets/images/destination5.jpg" class="img-fluid" alt="">
+          </a>
+          <div class="dest_txt">
+            <h4>middle east</h4>
+          </div>
+        </div>
+        <div class="dest_img">
+          <a href="#">
+            <img src="assets/images/destination6.jpg" class="img-fluid" alt="">
+          </a>
+          <div class="dest_txt">
+            <h4>north & south america</h4>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <section class="services"></section>
   <section class="we_offers"></section>
@@ -75,7 +125,7 @@
   <section class="gallery"></section>
 </main>
 
-<footer></footer> -->
+<footer></footer>
 
 
 
