modified services section

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
       <div class="ser">
         <div class="ser_img">
           <img src="assets/images/service1.jpg" class="img-fluid" alt="">
+          <div class="img_back1"></div>
         </div>
         <div class="ser_txt">
           <h2>mice</h2>
@@ -206,11 +207,12 @@
       </div>
       <div class="ser flex-row-reverse">
         <div class="ser_img">
-          <img src="assets/images/service1.jpg" class="img-fluid" alt="">
+          <img src="assets/images/service2.jpg" class="img-fluid" alt="">
+          <div class="img_back2"></div>
         </div>
         <div class="ser_txt">
-          <h2>mice</h2>
-          <p>MICE tourism refers to Meetings, Incentives, Conferences, and Exhibitions/Events tourism. It's a specialized sector focused on hosting business-related gatherings, rewarding incentives, conferences, and exhibitions. It's important for boosting tourism, supporting local economies, and facilitating knowledge exchange and networking.</p>
+          <h2>Unique Services</h2>
+          <p>Unique services in travel are specialized offerings that provide distinct and personalized experiences. They include adventure planning, culinary tours, cultural immersion programs, luxury travel concierge, medical tourism, themed experiences, solo travel support, responsible and sustainable travel options, pilgrimage tours, and community engagement trips.</p>
           <a href="#">view more</a>
         </div>
       </div>
