added blog section

--- a/index.html
+++ b/index.html
@@ -219,7 +219,62 @@
     </div>
   </section>
   <section class="we_offers"></section>
-  <section class="blog"></section>
+
+  <section class="blog">
+    <div class="container">
+      <h3>From Our Blog</h3>
+      <p>We’ve gathered experience from the years we have spent helping our clients design the holidays of their dreams. Keep up with our blog to hear about some of our favorite destinations, our handy travel tips and so much more.</p>
+
+      <div class="news-media">
+        <div class="blog-img">
+          <img class="img-fluid" src="assets/images/Were-Glad.png" alt="" srcset="">
+          <div class="news-date">
+            <h4>24</h4>
+            <p>JUN</p>
+          </div>
+        </div>
+        <div class="news-content">
+          <div class="news-btn1"><a href="#">News & Media</a></div>
+          <h3><a href="#">Travel Tricks: Leading the Way in Global MICE Services</a></h3>
+          <div class="icons">
+            <p>By</p>
+            <i class="bi bi-person-circle"></i>
+            <a href="#">Charu</a>
+            <a href="#"><i class="bi bi-chat-left-dots"></i></a>
+            <a href="#"><i class="bi bi-share"></i></a>
+          </div>
+          <p>At Travel Tricks, we pride ourselves on our strong partnerships and our ability to deliver exceptional MICE</p>
+          <div class="news-btn2"><a href="#">Continue reading</a></div>
+
+        </div>
+      </div>
+      <div class="travel RR">
+        <div class="travel-img">
+          <img class="img-fluid" src="assets/images/blog-1.png" alt="" srcset="">
+          <div class="travel-date">
+            <h4>19</h4>
+            <p>JUN</p>
+          </div>
+        </div>
+        
+        <div class="travel-content">
+          <div class="travel-btn1"><a href="#">travel</a></div>
+          <h3><a href="#">Revolutionizing Bespoke Travel Experiences Around The Globes</a></h3>
+          <div class="icons">
+            <p>By</p>
+            <i class="bi bi-person-circle"></i>
+            <a href="#">Charu</a>
+            <a href="#"><i class="bi bi-chat-left-dots"></i></a>
+            <a href="#"><i class="bi bi-share"></i></a>
+          </div>
+          <p>Welcome to Travel Tricks, your gateway to world-class travel experiences. As a leading Destination Management ...</p>
+          <div class="travel-btn2"><a href="#">Continue reading</a></div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="reviews"></section>
   <section class="gallery"></section>
 </main>
