added animation in blog

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <a href="#"><i class="bi bi-chat-left-dots"></i></a>
             <a href="#"><i class="bi bi-share"></i></a>
           </div>
-          <p>Welcome to Travel Tricks, your gateway to world-class travel experiences. As a leading Destination Management ...</p>
+          <p>Welcome to Travel Tricks, your gateway to world-class travel experiences. As a leading Destination Management</p>
           <div class="travel-btn2"><a href="#">Continue reading</a></div>
 
         </div>
