added offers section

--- a/index.html
+++ b/index.html
@@ -218,8 +218,35 @@
       </div>
     </div>
   </section>
-  <section class="we_offers"></section>
+  <section class="we_offers">
+    <div class="container">
+      <h3>What We Offer</h3>
+      <p>Discover the World, Create Your Story: Your Journey, Our Expertise.</p>
+      <div class="offers">
+        <div class="offer">
+          <img src="assets/images/Icon-1.png" alt="">
+          <h5>Tickets booking</h5>
+          <p>Book Your Adventure with Ease and Experience the Extraordinary.</p>
+        </div>
+        <div class="offer">
+          <img src="assets/images/Icon-2.png" alt="">
+          <h5>Comfortable rest</h5>
+          <p>Tranquil Retreats: Unwind in Unmatched Comfort with Travel Tricks.</p>
+        </div>
+        <div class="offer">
+          <img src="assets/images/Icon-3.png" alt="">
+          <h5>Beautiful sceneries</h5>
+          <p>Nature's Canvas Unveiled: Picture-Perfect Destinations Await.</p>
+        </div>
+        <div class="offer">
+          <img src="assets/images/Icon-4.png" alt="">
+          <h5>Modern service</h5>
+          <p>Elevate Your Experience: Futuristic Hospitality, Timeless Memories.</p>
+        </div>
+      </div>
 
+    </div>
+  </section>
   <section class="blog">
     <div class="container">
       <h3>From Our Blog</h3>
@@ -274,7 +301,6 @@
       </div>
     </div>
   </section>
-
   <section class="reviews"></section>
   <section class="gallery"></section>
 </main>
