added reviews section and footer content

--- a/index.html
+++ b/index.html
@@ -301,11 +301,95 @@
       </div>
     </div>
   </section>
-  <section class="reviews"></section>
+  <section class="reviews" style="background-image: url(assets/images/travel-testimonials-bg.jpg);">
+    <div class="container">
+      <h3>Clients Reviews</h3>
+      <p>Satisfied customers are our best ads</p>
+
+      <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="d-block w-100 carousel-content">
+              <!-- <img src="assets/images/reviews1.jpg" alt="" class="rounded-circle img-fluid"> -->
+              <p>My heartfelt thank you to everyone in your company, Travel Tricks for your excellent
+                services. My journey back to Jakarta went so smoothly and without a hitch. I really
+                ppreciate your attention to all my travel details, and your prompt replies to all the phone
+                alls and emails. I appreciate your help with my travel bookings as well as your guidance
+                on all the travel documents I needed along my ways.</p>
+              <h4>Prisha Harjani</h4>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-block w-100 carousel-content">
+              <p>Highly Recommended Travel Tricks as they have provided excellent service towards my quarantine needs. Not only did they help me with a difficult situation they managed to
+                guide through stressful situation and made sure I got to Hong Kong and allocated a
+                comfortable room in the Hotel. Thank you for your professional service.</p>
+              <h4>Shirley Budhrani</h4>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-block w-100 carousel-content">
+              <p>I wanted to send a quick note to let you and your team know that I was very happy to work
+                with Travel Tricks Ltd. You have been prompt, efficient and helpful in meeting our requests
+                and requirements. I would be glad to recommend you to my colleagues and associates.
+                Keep up the good work.</p>
+              <h4>Siddharth Vallath</h4>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+        
+      
+    </div>
+  </section>
   <section class="gallery"></section>
 </main>
 
-<footer></footer>
+<!-- <footer>
+  <div class="main-footer">
+    <div class="container">
+      <div class="payment">
+        <a href="#"><img src="assets/images/travel-tricks-logo.png" alt=""></a>
+        <p>Travel Tricks is a leading Destination Management Company (DMC) founded in Hong Kong with a focus on crafting tailor-made travel solutions.</p>
+        <a href="#"><img src="assets/images/VISA.png" alt=""></a>
+      </div>
+      <div class="featured">
+        <h5>Featured Destinations</h5>
+        <ul>
+          <li><a href="#">Southeast Asia</a></li>
+          <li><a href="#">East Asia</a></li>
+          <li><a href="#">Indian Ocean</a></li>
+          <li><a href="#">Europe</a></li>
+          <li><a href="#">Middle East</a></li>
+          <li><a href="#">North & South America</a></li>
+          <li><a href="#">Africa</a></li>
+        </ul>
+      </div>
+      <div class="offices">
+        <h5>Our Offices</h5>
+        <ul>
+          <li><a href="#">Dubai, UAE</a></li>
+          <li><a href="#">+971 50 582 4695</a></li>
+          <li><a href="#">+971 56 680 4232</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Hong Kong</a></li>
+          <li><a href="#">+852 9512 8494</a></li>
+          <li><a href="#">852 9512 8494</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  
+</footer> -->
 
 
 
