--- a/index.html
+++ b/index.html
@@ -353,43 +353,46 @@
   <section class="gallery"></section>
 </main>
 
-<!-- <footer>
+<footer>
   <div class="main-footer">
     <div class="container">
       <div class="payment">
-        <a href="#"><img src="assets/images/travel-tricks-logo.png" alt=""></a>
+        <img src="assets/images/travel-tricks-logo.png" class="img-fluid" alt="">
         <p>Travel Tricks is a leading Destination Management Company (DMC) founded in Hong Kong with a focus on crafting tailor-made travel solutions.</p>
-        <a href="#"><img src="assets/images/VISA.png" alt=""></a>
+        <img src="assets/images/VISA.png" alt="">
       </div>
       <div class="featured">
         <h5>Featured Destinations</h5>
         <ul>
-          <li><a href="#">Southeast Asia</a></li>
-          <li><a href="#">East Asia</a></li>
-          <li><a href="#">Indian Ocean</a></li>
-          <li><a href="#">Europe</a></li>
-          <li><a href="#">Middle East</a></li>
-          <li><a href="#">North & South America</a></li>
-          <li><a href="#">Africa</a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  Southeast Asia</a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  East Asia</a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  Indian Ocean</a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  Europe</a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  Middle East</a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  North & South America</a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  Africa</a></li>
         </ul>
-      </div>
+      </div> 
       <div class="offices">
         <h5>Our Offices</h5>
-        <ul>
-          <li><a href="#">Dubai, UAE</a></li>
-          <li><a href="#">+971 50 582 4695</a></li>
-          <li><a href="#">+971 56 680 4232</a></li>
+        <ul class="DU">
+          <li><a href="#"><i class="bi bi-geo-alt"></i>   Dubai, UAE</a></li>
+          <li><a href="#"><i class="bi bi-telephone-fill"></i>   +971 50 582 4695</a></li>
+          <li><a href="#"><i class="bi bi-whatsapp"></i>   +971 56 680 4232</a></li>
         </ul>
-        <ul>
-          <li><a href="#">Hong Kong</a></li>
-          <li><a href="#">+852 9512 8494</a></li>
-          <li><a href="#">852 9512 8494</a></li>
+        <ul class="Hk">
+          <li><a href="#"><i class="bi bi-geo-alt"></i>   Hong Kong</a></li>
+          <li><a href="#"><i class="bi bi-telephone-fill"></i>   +852 9512 8494</a></li>
+          <li><a href="#"><i class="bi bi-whatsapp"></i>   852 9512 8494</a></li>
         </ul>
       </div>
     </div>
   </div>
+  <div class="sub-footer">
+    <p>Copyright © <span style="font-weight: 700;">Travel Tricks Limited</span> </p>
+  </div>
   
-</footer> -->
+</footer>
 
 
 
