added instagram section

--- a/index.html
+++ b/index.html
@@ -350,7 +350,124 @@
       
     </div>
   </section>
-  <section class="gallery"></section>
+  <section class="gallery_main">
+    <div class="gallery">
+      <div class="gall">
+        <a href="#">
+          <img src="assets/images/gall1.jpg" class="img-fluid" alt="">
+        </a>
+        <ul class="gall_txt">
+          <li><i class="bi bi-heart"></i><span>2840</span></li>
+          <li><i class="bi bi-chat-left"></i><span>935</span></li>
+        </ul>
+      </div>
+      <div class="gall">
+        <a href="#">
+          <img src="assets/images/gall2.jpeg" class="img-fluid" alt="">
+        </a>
+        <ul class="gall_txt">
+          <li><i class="bi bi-heart"></i><span>2840</span></li>
+          <li><i class="bi bi-chat-left"></i><span>935</span></li>
+        </ul>
+      </div>
+      <div class="gall">
+        <a href="#">
+          <img src="assets/images/gall3.jpg" class="img-fluid" alt="">
+        </a>
+        <ul class="gall_txt">
+          <li><i class="bi bi-heart"></i><span>2840</span></li>
+          <li><i class="bi bi-chat-left"></i><span>935</span></li>
+        </ul>
+      </div>
+      <div class="gall">
+        <a href="#">
+          <img src="assets/images/gall4.jpg" class="img-fluid" alt="">
+        </a>
+        <ul class="gall_txt">
+          <li><i class="bi bi-heart"></i><span>2840</span></li>
+          <li><i class="bi bi-chat-left"></i><span>935</span></li>
+        </ul>
+      </div>
+      <div class="gall">
+        <a href="#">
+          <img src="assets/images/gall5.jpg" class="img-fluid" alt="">
+        </a>
+        <ul class="gall_txt">
+          <li><i class="bi bi-heart"></i><span>2840</span></li>
+          <li><i class="bi bi-chat-left"></i><span>935</span></li>
+        </ul>
+      </div>
+      <div class="gall">
+        <a href="#">
+          <img src="assets/images/gall6.jpg" class="img-fluid" alt="">
+        </a>
+        <ul class="gall_txt">
+          <li><i class="bi bi-heart"></i><span>2840</span></li>
+          <li><i class="bi bi-chat-left"></i><span>935</span></li>
+        </ul>
+      </div>
+      <div class="gall">
+        <a href="#">
+          <img src="assets/images/gall6.jpg" class="img-fluid" alt="">
+        </a>
+        <ul class="gall_txt">
+          <li><i class="bi bi-heart"></i><span>2840</span></li>
+          <li><i class="bi bi-chat-left"></i><span>935</span></li>
+        </ul>
+      </div>
+      <div class="gall">
+        <a href="#">
+          <img src="assets/images/gall5.jpg" class="img-fluid" alt="">
+        </a>
+        <ul class="gall_txt">
+          <li><i class="bi bi-heart"></i><span>2840</span></li>
+          <li><i class="bi bi-chat-left"></i><span>935</span></li>
+        </ul>
+      </div>
+      <div class="gall">
+        <a href="#">
+          <img src="assets/images/gall4.jpg" class="img-fluid" alt="">
+        </a>
+        <ul class="gall_txt">
+          <li><i class="bi bi-heart"></i><span>2840</span></li>
+          <li><i class="bi bi-chat-left"></i><span>935</span></li>
+        </ul>
+      </div>
+      <div class="gall">
+        <a href="#">
+          <img src="assets/images/gall3.jpg" class="img-fluid" alt="">
+        </a>
+        <ul class="gall_txt">
+          <li><i class="bi bi-heart"></i><span>2840</span></li>
+          <li><i class="bi bi-chat-left"></i><span>935</span></li>
+        </ul>
+      </div>
+      <div class="gall">
+        <a href="#">
+          <img src="assets/images/gall2.jpeg" class="img-fluid" alt="">
+        </a>
+        <ul class="gall_txt">
+          <li><i class="bi bi-heart"></i><span>2840</span></li>
+          <li><i class="bi bi-chat-left"></i><span>935</span></li>
+        </ul>
+      </div>
+      <div class="gall">
+        <a href="#">
+          <img src="assets/images/gall1.jpg" class="img-fluid" alt="">
+        </a>
+        <ul class="gall_txt">
+          <li><i class="bi bi-heart"></i><span>2840</span></li>
+          <li><i class="bi bi-chat-left"></i><span>935</span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="instagram">
+      <h4>instagram</h4>
+      <h5>@traveltricksltd</h5>
+      <a href="#">travel tricks limited</a>
+      <p>Our mission is to bring about positive change through the joy and happiness of travel.</p>
+    </div>
+  </section>
 </main>
 
 <footer>
