--- a/index.html
+++ b/index.html
@@ -118,20 +118,42 @@
 
 <!-- banner -->
 
-<!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleFade" class="carousel slide carousel-fade my-carousel" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="assets/images/banner.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h4>a region in southern china with nine cities in guangdong province</h4>
+        <h5>explore the creater bay area</h5>
+        <a href="#">explore GBA</a>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="assets/images/banner1.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h4>a region in southern china with nine cities in guangdong province</h4>
+        <h5>explore the creater bay area</h5>
+        <a href="#">explore GBA</a>
+      </div>
     </div>
     <div class="carousel-item">
       <img src="assets/images/banner.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/images/banner.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h4>a region in southern china with nine cities in guangdong province</h4>
+        <h5>explore the creater bay area</h5>
+        <a href="#">explore GBA</a>
+      </div>
     </div>
   </div>
-</div> -->
-
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 <!-- banner -->
 
 <main>
@@ -307,10 +329,15 @@
       <p>Satisfied customers are our best ads</p>
 
       <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
-        <div class="carousel-inner">
+        <ol class="carousel-indicators">
+          <li data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide-to="0" class="active"></li>
+          <li data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide-to="1"></li>
+          <li data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner carousel-in">
           <div class="carousel-item active">
-            <div class="d-block w-100 carousel-content">
-              <!-- <img src="assets/images/reviews1.jpg" alt="" class="rounded-circle img-fluid"> -->
+            <div class="d-block w-100 carousel-content text-center">
+              <img src="assets/images/reviews1.jpg" alt="" class="rounded-circle img-fluid">
               <p>My heartfelt thank you to everyone in your company, Travel Tricks for your excellent
                 services. My journey back to Jakarta went so smoothly and without a hitch. I really
                 ppreciate your attention to all my travel details, and your prompt replies to all the phone
@@ -320,7 +347,8 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="d-block w-100 carousel-content">
+            <div class="d-block w-100 carousel-content text-center">
+              <img src="assets/images/reviews1.jpg" alt="" class="rounded-circle img-fluid">
               <p>Highly Recommended Travel Tricks as they have provided excellent service towards my quarantine needs. Not only did they help me with a difficult situation they managed to
                 guide through stressful situation and made sure I got to Hong Kong and allocated a
                 comfortable room in the Hotel. Thank you for your professional service.</p>
@@ -328,7 +356,8 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="d-block w-100 carousel-content">
+            <div class="d-block w-100 carousel-content text-center">
+              <img src="assets/images/reviews1.jpg" alt="" class="rounded-circle img-fluid">
               <p>I wanted to send a quick note to let you and your team know that I was very happy to work
                 with Travel Tricks Ltd. You have been prompt, efficient and helpful in meeting our requests
                 and requirements. I would be glad to recommend you to my colleagues and associates.
@@ -481,13 +510,13 @@
       <div class="featured">
         <h5>Featured Destinations</h5>
         <ul>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  Southeast Asia</a></li>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  East Asia</a></li>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  Indian Ocean</a></li>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  Europe</a></li>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  Middle East</a></li>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  North & South America</a></li>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  Africa</a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>Southeast Asia</span></a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>East Asia</span></a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>Indian Ocean</span></a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>Indian Ocean</span></a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>Middle East</span></a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>North & South America</span></a></li>
+          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>Africa</span></a></li>
         </ul>
       </div> 
       <div class="offices">
