--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
 <main>
   <section class="destination">
     <div class="container">
-      <h2 class="aos-init aos-animate" data-aos="fade-down">choose your</h2>
-      <h3 class="aos-init aos-animate" data-aos="fade-down">perfect destinations</h3>
-      <p class="aos-init aos-animate" data-aos="fade-down">Purchase treasures from the souks in Dubai. Explore the rice fields of Indonesia. Savour a coffee and croissant on the cobbled streets of Italy, or swim in sparkling waters on the beaches of Thailand. Whether its luxury accommodation, exquisite cuisine, natural wonders, historical treasures or peaceful getaways you’re after, we can craft the perfect holiday for you.</p>
-      <div class="destination_images aos-init aos-animate" data-aos="zoom-in">
+      <h2 class="aos-init aos-animate" data-aos="fade-down" data-aos-offset="30">choose your</h2>
+      <h3 class="aos-init aos-animate" data-aos="fade-down" data-aos-offset="30">perfect destinations</h3>
+      <p class="aos-init aos-animate" data-aos="fade-down" data-aos-offset="30">Purchase treasures from the souks in Dubai. Explore the rice fields of Indonesia. Savour a coffee and croissant on the cobbled streets of Italy, or swim in sparkling waters on the beaches of Thailand. Whether its luxury accommodation, exquisite cuisine, natural wonders, historical treasures or peaceful getaways you’re after, we can craft the perfect holiday for you.</p>
+      <div class="destination_images aos-init aos-animate" data-aos="zoom-in" data-aos-offset="30">
         <div class="dest_img">
           <a href="#">
             <img src="assets/images/destination1.jpg" class="img-fluid" alt="">
@@ -230,7 +230,7 @@
       </div>
       <div class="ser flex-row-reverse">
         <div class="ser_img">
-          <img src="assets/images/service2.jpg" class="img-fluid aos-init aos-animate" alt="" data-aos="flip-right">
+          <img src="assets/images/service2.jpg" class="img-fluid aos-init aos-animate" alt="" data-aos="flip-right" data-aos-offset="30">
           <div class="img_back2"></div>
         </div>
         <div class="ser_txt">
@@ -243,9 +243,9 @@
   </section>
   <section class="we_offers">
     <div class="container">
-      <h3 class="aos-init aos-animate" data-aos="zoom-in">What We Offer</h3>
-      <p class="aos-init aos-animate" data-aos="zoom-in">Discover the World, Create Your Story: Your Journey, Our Expertise.</p>
-      <div class="offers aos-init aos-animate" data-aos="fade-up">
+      <h3 class="aos-init aos-animate" data-aos="zoom-in" data-aos-offset="30">What We Offer</h3>
+      <p class="aos-init aos-animate" data-aos="zoom-in" data-aos-offset="30">Discover the World, Create Your Story: Your Journey, Our Expertise.</p>
+      <div class="offers aos-init aos-animate" data-aos="fade-up" data-aos-offset="30">
         <div class="offer">
           <img src="assets/images/Icon-1.png" alt="">
           <h5>Tickets booking</h5>
