add responsive to 768px

--- a/index.html
+++ b/index.html
@@ -298,17 +298,17 @@
 
         </div>
       </div>
-      <div class="travel RR">
-        <div class="travel-img">
+      <div class="news-media flex-row-reverse">
+        <div class="blog-img">
           <img class="img-fluid" src="assets/images/blog-1.png" alt="" srcset="">
-          <div class="travel-date">
+          <div class="news-date">
             <h4>19</h4>
             <p>JUN</p>
           </div>
         </div>
         
-        <div class="travel-content">
-          <div class="travel-btn1"><a href="#">travel</a></div>
+        <div class="news-content m-right">
+          <div class="news-btn1"><a href="#">travel</a></div>
           <h3><a href="#">Revolutionizing Bespoke Travel Experiences Around The Globes</a></h3>
           <div class="icons">
             <p>By</p>
@@ -318,7 +318,7 @@
             <a href="#"><i class="bi bi-share"></i></a>
           </div>
           <p>Welcome to Travel Tricks, your gateway to world-class travel experiences. As a leading Destination Management</p>
-          <div class="travel-btn2"><a href="#">Continue reading</a></div>
+          <div class="news-btn2"><a href="#">Continue reading</a></div>
 
         </div>
       </div>
