--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
       <div class="news-media">
         <div class="blog-img">
-          <img class="img-fluid" src="assets/images/Were-Glad.png" alt="" srcset="">
+          <a href="#"><img class="img-fluid" src="assets/images/Were-Glad.png" alt=""></a>
           <div class="news-date">
             <h4>24</h4>
             <p>JUN</p>
@@ -291,7 +291,7 @@
             <i class="bi bi-person-circle"></i>
             <a href="#">Charu</a>
             <a href="#"><i class="bi bi-chat-left-dots"></i></a>
-            <a href="#"><i class="bi bi-share"></i></a>
+            <a href="#" class="share"><i class="bi bi-share"></i></a>
           </div>
           <p>At Travel Tricks, we pride ourselves on our strong partnerships and our ability to deliver exceptional MICE</p>
           <div class="news-btn2"><a href="#">Continue reading</a></div>
@@ -300,13 +300,12 @@
       </div>
       <div class="news-media flex-row-reverse">
         <div class="blog-img">
-          <img class="img-fluid" src="assets/images/blog-1.png" alt="" srcset="">
+          <a href="#"><img class="img-fluid" src="assets/images/blog-1.png" alt=""></a>
           <div class="news-date">
             <h4>19</h4>
             <p>JUN</p>
           </div>
         </div>
-        
         <div class="news-content m-right">
           <div class="news-btn1"><a href="#">travel</a></div>
           <h3><a href="#">Revolutionizing Bespoke Travel Experiences Around The Globes</a></h3>
