resolve container issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <header>
     <div class="Top-bar">
-        <div class="container">
+        <div class="container custom-container">
           <div class="Top-first">
             <ul class="Top-first-left">
               <li><a href="#"><i class="bi bi-geo-alt"></i><span class="top-bar-text">Dubai</span></a></li>
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="header" id="myHeader">
-        <div class="container">
+        <div class="container custom-container">
           <div class="header-content">
             
             <div id="mySidenav" class="sidenav">
