--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="assets/images/banner.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <h4>a region in southern china with nine cities in guangdong province</h4>
         <h5>explore the creater bay area</h5>
         <a href="#">explore GBA</a>
@@ -146,7 +146,7 @@
     </div>
     <div class="carousel-item">
       <img src="assets/images/banner1.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <h4>a region in southern china with nine cities in guangdong province</h4>
         <h5>explore the creater bay area</h5>
         <a href="#">explore GBA</a>
