--- a/index.html
+++ b/index.html
@@ -306,7 +306,16 @@
             <i class="bi bi-person-circle"></i>
             <a href="#">Charu</a>
             <a href="#"><i class="bi bi-chat-left-dots"></i></a>
-            <a href="#" class="share"><i class="bi bi-share"></i></a>
+            <div class="share">
+              <a href="#"><i class="bi bi-share"></i></a>
+              <ul class="social">
+                <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+                <li><a href="#"><i class="bi bi-pinterest"></i></a></li>
+                <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+                <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+              </ul>
+            </div>
           </div>
           <p>At Travel Tricks, we pride ourselves on our strong partnerships and our ability to deliver exceptional MICE</p>
           <div class="news-btn2"><a href="#">Continue reading</a></div>
@@ -329,7 +338,16 @@
             <i class="bi bi-person-circle"></i>
             <a href="#">Charu</a>
             <a href="#"><i class="bi bi-chat-left-dots"></i></a>
-            <a href="#"><i class="bi bi-share"></i></a>
+            <div class="share">
+              <a href="#"><i class="bi bi-share"></i></a>
+              <ul class="social">
+                <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+                <li><a href="#"><i class="bi bi-pinterest"></i></a></li>
+                <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+                <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+              </ul>
+            </div>
           </div>
           <p>Welcome to Travel Tricks, your gateway to world-class travel experiences. As a leading Destination Management</p>
           <div class="news-btn2"><a href="#">Continue reading</a></div>
