--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
   <div class="sub-footer">
     <p>Copyright © <span style="font-weight: 700;">Travel Tricks Limited</span> </p>
   </div>
-  
+  <button id="goToTopBtn" title="Go to Top"><i class="bi bi-chevron-up"></i></button>
 </footer>
 
 
