--- a/index.html
+++ b/index.html
@@ -559,13 +559,13 @@
       <div class="featured">
         <h5>Featured Destinations</h5>
         <ul>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>Southeast Asia</span></a></li>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>East Asia</span></a></li>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>Indian Ocean</span></a></li>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>Indian Ocean</span></a></li>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>Middle East</span></a></li>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>North & South America</span></a></li>
-          <li><a href="#"><i class="bi bi-chevron-double-right"></i>  <span>Africa</span></a></li>
+          <li><a href="#"><i class="fa-solid fa-angles-right"></i>  <span>Southeast Asia</span></a></li>
+          <li><a href="#"><i class="fa-solid fa-angles-right"></i>  <span>East Asia</span></a></li>
+          <li><a href="#"><i class="fa-solid fa-angles-right"></i>  <span>Indian Ocean</span></a></li>
+          <li><a href="#"><i class="fa-solid fa-angles-right"></i>  <span>Indian Ocean</span></a></li>
+          <li><a href="#"><i class="fa-solid fa-angles-right"></i>  <span>Middle East</span></a></li>
+          <li><a href="#"><i class="fa-solid fa-angles-right"></i>  <span>North & South America</span></a></li>
+          <li><a href="#"><i class="fa-solid fa-angles-right"></i>  <span>Africa</span></a></li>
         </ul>
       </div> 
       <div class="offices">
