--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="assets/images/banner.jpg" class="d-block w-100" alt="...">
+      <img src="assets/images/1.webp" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h4>a region in southern china with nine cities in guangdong province</h4>
         <h5>explore the creater bay area</h5>
