--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </div>
     <div class="carousel-item">
       <img src="assets/images/1.webp" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <h4>a region in southern china with nine cities in guangdong province</h4>
         <h5>explore the creater bay area</h5>
         <a href="#">explore GBA</a>
