added static icons

--- a/index.html
+++ b/index.html
@@ -588,8 +588,11 @@
 <ul class="contact_us">
   <li class="minimize"><span><i class="bi bi-arrow-right text-white"></i></span></li>
   <li class="contact_page"><span><i class="bi bi-envelope text-white"></i> Contact Us</span></li>
-  <li class="wtsp"><a href="#"><i class="bi bi-whatsapp text-white"></i></a></li>
-  <li class="email"><a href="#"><i class="bi bi-envelope text-white"></i></a></li>
+  <li class="wtsp"><span><a href="#"><i class="bi bi-whatsapp text-white"></i></a></span></li>
+  <li class="email">
+    <span><a href="#"><i class="bi bi-envelope text-white"></i></a></span>
+    <span class="env">email</span>
+  </li>
 </ul>
 
 
